riptides-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: riptides-ui
    microservice: riptides
  name: riptides-ui-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: riptides-ui
  sessionAffinity: None
  type: NodePort
